--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htnl lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
@@ -15,27 +15,27 @@
 
       /* Large Desktop */
       @media (min-width: 980px) {
-      body {
-      padding-top: 60px
-      }
-      .linediv-l {
-      border-right: 1px white solid;
-      }
-      .linediv-r {
-      border-left: 1px white solid;
-      }
+        body {
+          padding-top: 60px;
+        }
+        .linediv-l {
+          border-right: 1px white solid;
+        }
+        .linediv-r {
+          border-left: 1px white solid;
+        }
       }
       /* Landscape phones and down */
       @media (max-width: 480px) {
-      .copy {
-      padding: 2.5% 10%;
-      }
-      .linediv-l {
-      border-bottom: 1px white solid;
-      }
-      .linediv-r {
-      border-top: 1px white solid;
-      }
+        .copy {
+          padding: 2.5% 10%;
+        }
+        .linediv-l {
+          border-bottom: 1px white solid;
+        }
+        .linediv-r {
+          border-top: 1px white solid;
+        }
       }
       /* All form factors */
 
@@ -44,17 +44,17 @@
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
       }
       p.lead {
         padding-top: 1.5%;
         font-size: 24px;
-        line-height: 124px;
+        line-height: 30px;
       }
       p {
         font-size: 18px;
-        line-height: 124px;
+        line-height: 24px;
       }
 
       /* Video pitch and Action */
@@ -158,7 +158,7 @@
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10000</p>
+		  <h3>$6000</h3> <p>of $10,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
